--- a/endnote.bib
+++ b/endnote.bib
@@ -131,10 +131,10 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    type = {Journal Article}
 }
 
-﻿@article{Hu_2019_GoodSelf,
+﻿@article{Hu_2020_GoodSelf,
    author = {Hu, Chuan-Peng and Lan, Yuxuan and Macrae, C. Neil and Sui, Jie},
    title = {Good Me Bad Me: Does Valence Influence Self-Prioritization During Perceptual Decision-Making?},
-   journal = {PsyArxiv},
+   journal = {Collabra: Psychology},
    DOI = {10.31234/osf.io/9fczh},
    url = {https://psyarxiv.com/9fczh},
    year = {2019},
@@ -189,4 +189,33 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    year = {1997},
    type = {Journal Article}
 }
+
+﻿@article{Stanislaw_Todorov_1999,
+   author = {Stanislaw, Harold and Todorov, Natasha},
+   title = {Calculation of signal detection theory measures},
+   journal = {Behavior Research Methods, Instruments, & Computers},
+   volume = {31},
+   number = {1},
+   pages = {137-149},
+   ISSN = {1532-5970},
+   DOI = {10.3758/BF03207704},
+   url = {https://doi.org/10.3758/BF03207704
+https://link.springer.com/content/pdf/10.3758/BF03207704.pdf},
+   year = {1999},
+   type = {Journal Article}
+}
+
+﻿@article{DeCarlo_1998,
+   author = {DeCarlo, Lawrence T.},
+   title = {Signal detection theory and generalized linear models},
+   journal = {Psychological Methods},
+   volume = {3},
+   number = {2},
+   pages = {186-205},
+   ISSN = {1939-1463(Electronic),1082-989X(Print)},
+   DOI = {10.1037/1082-989X.3.2.186},
+   year = {1998},
+   type = {Journal Article}
+}
+
 
