--- a/endnote.bib
+++ b/endnote.bib
@@ -218,4 +218,49 @@ https://link.springer.com/content/pdf/10.3758/BF03207704.pdf},
    type = {Journal Article}
 }
 
+﻿@article{Rouder_2005_BHM_SDT,
+   author = {Rouder, Jeffrey N. and Lu, Jun},
+   title = {An introduction to Bayesian hierarchical models with an application in the theory of signal detection},
+   journal = {Psychonomic Bulletin & Review},
+   volume = {12},
+   number = {4},
+   pages = {573-604},
+   ISSN = {1531-5320},
+   DOI = {10.3758/bf03196750},
+   url = {https://doi.org/10.3758/BF03196750
+https://link.springer.com/content/pdf/10.3758%2FBF03196750.pdf},
+   year = {2005},
+   type = {Journal Article}
+}
+
+﻿@article{Bürkner_2017,
+   author = {Bürkner, Paul-Christian},
+   title = {brms: An R Package for Bayesian Multilevel Models Using Stan},
+   journal = {Journal of Statistical Software; Vol 1, Issue 1 (2017)},
+   url = {https://www.jstatsoft.org/v080/i01
+http://dx.doi.org/10.18637/jss.v080.i01},
+   year = {2017},
+   type = {Journal Article}
+}
+
+﻿@article{Carpenter_2017_stan,
+   author = {Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D. and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+   title = {Stan: A probabilistic programming language},
+   journal = {Journal of Statistical Software},
+   volume = {76},
+   number = {1},
+   DOI = {10.18637/jss.v076.i01},
+   year = {2017},
+   type = {Journal Article}
+}
+
+﻿@misc{RN15994,
+   author = {Rousselet, Guillaume A and Wilcox, Rand R}
+   title = {Reaction times and other skewed distributions: problems with the mean and the median}
+   DOI= {10.1101/383935},
+   url = {https://www.biorxiv.org/content/10.1101/383935v3},
+   year = {2019},
+   type = {preprint}
+}
+
 
